# goph547-w2026-lab01-stCI

./: .gitignore  README.md  pyproject.toml
examples/: check_anomaly_data.py  driver_mass_anomaly.py  driver_multi_mass.py  driver_single_mass.py
src/goph547lab01/: gravity.py
tests/: test_gravity_functions.py
